[package]
name = "lin_alg_crate"
version = "0.1.0"
edition = "2018"

[lib]
name = "linalg"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.5"
nalgebra = "0.32.3"


